--- a/templates/grafana-dashboards/workloads/grafana-dashboards/dashboards/k8s-views-global-15757.json.j2
+++ b/templates/grafana-dashboards/workloads/grafana-dashboards/dashboards/k8s-views-global-15757.json.j2
@@ -434,9 +434,19 @@
             "type": "prometheus",
             "uid": "${datasource}"
           },
-          "expr": "sum(kube_pod_container_status_running)",
+          "expr": "sum(kube_pod_status_phase{phase='Running'})",
           "interval": "",
           "legendFormat": "Running Pods",
+          "refId": "O"
+        },
+        {
+          "datasource": {
+            "type": "prometheus",
+            "uid": "${datasource}"
+          },
+          "expr": "sum(kube_pod_container_status_running)",
+          "interval": "",
+          "legendFormat": "Running Containers",
           "refId": "B"
         },
         {
@@ -872,7 +882,7 @@
             "type": "prometheus",
             "uid": "${datasource}"
           },
-          "expr": "sum(kube_pod_info)",
+          "expr": "sum(kube_pod_status_phase{phase='Running'})",
           "interval": "",
           "legendFormat": "",
           "refId": "A"
@@ -2021,7 +2031,7 @@
   "timezone": "",
   "title": "Kubernetes / Views / Global",
   "uid": "k8s_views_global",
-  "version": 13,
+  "version": 14,
   "weekStart": ""
 }
 {% endraw %}
