Updated argocd github secret to match argocd docs

--- a/templates/argocd/git_repo/workloads/secrets/argocd_secret.yaml.j2
+++ b/templates/argocd/git_repo/workloads/secrets/argocd_secret.yaml.j2
@@ -6,7 +6,11 @@ kind: Secret
 metadata:
   name: {{install.argocd.repository.name}}-secret
   namespace: {{install.argocd.namespace}}
+  labels:
+    argocd.argoproj.io/secret-type: repository
 type: Opaque
-data:
-  username: {{install.argocd.repository.username|b64encode}}
-  password: {{install.argocd.repository.password|b64encode}}
+stringData:
+  type: git
+  url: {{install.argocd.repository.url}}
+  username: {{install.argocd.repository.username}}
+  password: {{install.argocd.repository.password}}
