--- a/templates/democratic_csi_nfs/applications/democratic_csi_nfs.yaml.j2
+++ b/templates/democratic_csi_nfs/applications/democratic_csi_nfs.yaml.j2
@@ -11,7 +11,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "12"  # Lower the number the sooner to deploy
     
 spec:
-  project: default
+  project:  {{install.democratic_csi.argocd_project|default("default")}}
   source:
     chart: democratic-csi
     repoURL: https://democratic-csi.github.io/charts/
