--- a/templates/longhorn/applications/longhorn-config.yaml.j2
+++ b/templates/longhorn/applications/longhorn-config.yaml.j2
@@ -10,7 +10,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "7"  # Lower the number the sooner to deploy
 spec:
-  project: default
+  project: {{install.longhorn.argocd_project|default("default")}}
 
   source:
     repoURL: {{install.argocd.repository.url}}.git
