--- a/templates/kube-vip-cloud-provider/applications/kube-vip-cloud-provider.yaml.j2
+++ b/templates/kube-vip-cloud-provider/applications/kube-vip-cloud-provider.yaml.j2
@@ -10,7 +10,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "0"  # Lower the number the sooner to deploy
 spec:
-  project: default
+  project: {{install.kube_vip.argocd_project|default("default")}}
 
   source:
     repoURL: {{install.argocd.repository.url}}.git
