--- a/templates/traefik/applications/traefik.yaml.j2
+++ b/templates/traefik/applications/traefik.yaml.j2
@@ -10,7 +10,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"  # Lower the number the sooner to deploy
 spec:
-  project: default
+  project: {{install.traefik.argocd_project|default("default")}}
   source:
     chart: traefik
     repoURL: https://helm.traefik.io/traefik
