--- a/templates/prometheus-op/applications/prometheus-op-monitors.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op-monitors.yaml.j2
@@ -10,7 +10,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "14"  # Lower the number the sooner to deploy
 spec:
-  project: default
+  project: {{install.prometheus_operator.argocd_project|default("default")}}
 
   source:
     repoURL: {{install.argocd.repository.url}}.git
