--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -11,7 +11,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "14"  # Lower the number the sooner to deploy
     
 spec:
-  project: default
+  project: {{install.prometheus_operator.argocd_project|default("default")}}
   source:
     chart: kube-prometheus-stack
     repoURL: https://prometheus-community.github.io/helm-charts
