Added kubernetes file match

--- a/templates/argocd/git_repo/renovate.json.j2
+++ b/templates/argocd/git_repo/renovate.json.j2
@@ -3,7 +3,10 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "argocd": {
-    "fileMatch": ["applications/.+\\.yaml$", "workloads/.+\\.yaml$"]
+    "fileMatch": ["applications/.+\\.ya?l$", "workloads/.+\\.ya?l$"]
+  },
+  "kubernetes": {
+    "fileMatch": ["applications/.+\\.ya?l$", "workloads/.+\\.ya?l$"]
   },
   "regexManagers": [
     {
