--- a/templates/prometheus-op/workloads/traefik-config/grafana_ingress_route.yaml.j2
+++ b/templates/prometheus-op/workloads/traefik-config/grafana_ingress_route.yaml.j2
@@ -46,7 +46,7 @@ spec:
       kind: Rule
       services:
       - kind: Service
-        name: {{prometheus_op.release_name}}-grafana
+        name: grafana
         port: 80
       middlewares:
       - name: grafana-stripprefix
