--- a/templates/prometheus-op/workloads/traefik-config/prometheus_op_ingress_route.yaml.j2
+++ b/templates/prometheus-op/workloads/traefik-config/prometheus_op_ingress_route.yaml.j2
@@ -45,7 +45,7 @@ spec:
       kind: Rule
       services:
       - kind: Service
-        name: {{prometheus_op.release_name}}-prometheus
+        name: prometheus-prometheus
         port: 9090
       middlewares:
       - name: prometheus-stripprefix
