--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -20,6 +20,9 @@ spec:
       skipCrds: true
       # Reference: https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-prometheus-stack/values.yaml
       values: |
+        ## Provide a name to substitute for the full names of resources
+        fullnameOverride: "prometheus"
+
         kubeApiServer:
           enabled: true
 
@@ -50,6 +53,10 @@ spec:
               - sourceLabels: [__name__]
                 action: drop
                 regex: 'container_spec.*'
+              - action: replace
+                sourceLabels:
+                  - node
+                targetLabel: instance
 
         kubeControllerManager:
           enabled: true
@@ -105,6 +112,44 @@ spec:
         kubeStateMetrics:
           enabled: true
 
+        kube-state-metrics:
+          fullnameOverride: kube-state-metrics
+          selfMonitor:
+            enabled: true
+          prometheus:
+            monitor:
+              enabled: true
+              relabelings:
+                - action: replace
+                  regex: (.*)
+                  replacement: $1
+                  sourceLabels:
+                    - __meta_kubernetes_pod_node_name
+                  targetLabel: instance
+
+        nodeExporter:
+          enabled: true
+        
+        prometheus-node-exporter:
+          fullnameOverride: node-exporter
+          podLabels:
+            jobLabel: node-exporter
+          extraArgs:
+            - --collector.filesystem.mount-points-exclude=^/(dev|proc|run|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
+            - --collector.filesystem.fs-types-exclude=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
+          service:
+            portName: http-metrics
+          prometheus:
+            monitor:
+              enabled: true
+              relabelings:
+                - action: replace
+                  regex: (.*)
+                  replacement: $1
+                  sourceLabels:
+                    - __meta_kubernetes_pod_node_name
+                  targetLabel: instance
+
         ## Manages Prometheus and Alertmanager components
         prometheusOperator:
           enabled: true
@@ -134,6 +179,7 @@ spec:
         # Graphana values
         # Reference: https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
         grafana:
+          fullnameOverride: "grafana"
           enabled: true
 
           grafana.ini:
@@ -176,6 +222,7 @@ spec:
         # AlertManager values
         # Reference: https://prometheus.io/docs/alerting/latest/configuration/
         alertmanager:
+          fullnameOverride: "alertmanager"
           enabled: true
 
           # Reference: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#alertmanagerspec
