Added cgroup label drop from 38.0.1 to match

--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -53,6 +53,11 @@ spec:
               - sourceLabels: [__name__]
                 action: drop
                 regex: 'container_spec.*'
+              # Drop cgroup metrics with no pod.
+              - sourceLabels: [id, pod]
+                action: drop
+                regex: '.+;'
+              # Change instance IP to node name
               - action: replace
                 sourceLabels:
                   - node
