Fixed filematch to be non-regex masks

--- a/templates/argocd/git_repo/renovate.json.j2
+++ b/templates/argocd/git_repo/renovate.json.j2
@@ -3,10 +3,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "argocd": {
-    "fileMatch": ["applications/.+\\.ya?l$", "workloads/.+\\.ya?l$"]
-  },
-  "kubernetes": {
-    "fileMatch": ["applications/.+\\.ya?l$", "workloads/.+\\.ya?l$"]
+    "fileMatch": ["applications/.+\\.yaml$", "workloads/.+\\.yaml$"]
   },
   "regexManagers": [
     {
