--- a/templates/grafana-dashboards/workloads/grafana-dashboards/dashboards/k8s-views-nodes-15759.json.j2
+++ b/templates/grafana-dashboards/workloads/grafana-dashboards/dashboards/k8s-views-nodes-15759.json.j2
@@ -225,7 +225,7 @@
             "uid": "${datasource}"
           },
           "exemplar": false,
-          "expr": "sum(container_memory_working_set_bytes{id=\"/\", node=\"$node\"}) / sum(machine_memory_bytes{node=\"$node\"})",
+          "expr": "sum(node_memory_MemTotal_bytes{instance=\"$instance\"} - node_memory_MemAvailable_bytes{instance=\"$instance\"}) / sum(node_memory_MemTotal_bytes{instance=\"$instance\"})",
           "instant": true,
           "interval": "$resolution",
           "legendFormat": "",
@@ -683,7 +683,7 @@
             "uid": "${datasource}"
           },
           "exemplar": false,
-          "expr": "sum(container_memory_working_set_bytes{id=\"/\", node=\"$node\"})",
+          "expr": "sum(node_memory_MemTotal_bytes{instance=\"$instance\"} - node_memory_MemAvailable_bytes{instance=\"$instance\"})",
           "instant": true,
           "interval": "",
           "legendFormat": "",
