--- a/templates/prometheus-op/workloads/secrets/prometheus-additional-scrape-configs_secret.yaml.j2
+++ b/templates/prometheus-op/workloads/secrets/prometheus-additional-scrape-configs_secret.yaml.j2
@@ -14,7 +14,6 @@ stringData:
       static_configs:
         - targets:
           {% filter indent(width=10) %}{% for IP in controlPlaneIPs.stdout_lines[0] | split(' ') %}- "{{IP}}:{{prometheus_op.zfs_exporter.port}}"
-{% endfor %}{% endfilter %}
-          {% filter indent(width=10) %}{% if workerNodeIPs.stdout_lines[0] is defined %}{% for IP in workerNodeIPs.stdout_lines[0] | split(' ') %}- "{{IP}}:{{prometheus_op.zfs_exporter.port}}"
+{% endfor %}{% if workerNodeIPs.stdout_lines[0] is defined %}{% for IP in workerNodeIPs.stdout_lines[0] | split(' ') %}- "{{IP}}:{{prometheus_op.zfs_exporter.port}}"
 {% endfor %}{% endif %}{% endfilter %}
 {{''}}{% endif %}
