--- a/templates/prometheus-op/applications/prometheus-op-crds.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op-crds.yaml.j2
@@ -13,9 +13,9 @@ metadata:
 spec:
   project: {{install.prometheus_operator.argocd_project|default("default")}}
   source:
-    repoURL: https://github.com/prometheus-community/helm-charts.git
-    path: charts/kube-prometheus-stack/crds/
-    targetRevision: kube-prometheus-stack-{{install.prometheus_operator.install_version}}
+    repoURL: https://github.com/prometheus-operator/prometheus-operator.git
+    path: example/prometheus-operator-crd/
+    targetRevision: {{install.prometheus_operator.crd_version}}
     directory:
       recurse: true
 
