FIX: remove regex on filename for CSI image update

--- a/templates/argocd/git_repo/renovate.json.j2
+++ b/templates/argocd/git_repo/renovate.json.j2
@@ -8,7 +8,7 @@
   "regexManagers": [
     {
       "description": "Update Democratic-csi docker image references",
-      "fileMatch": ["^applications\\/democratic_csi_.*\\.ya?l$"],
+      "fileMatch": ["^applications\\/democratic_csi_.*\\.yaml$"],
       "matchStrings": ["image: (?<depName>.*?):(?<currentValue>.*?)\\s+"],
       "datasourceTemplate": "docker"
     },
