Set revision history limit on ArgoCD apps

--- a/templates/argocd/git_repo/applications/argocd.yaml.j2
+++ b/templates/argocd/git_repo/applications/argocd.yaml.j2
@@ -12,6 +12,7 @@ metadata:
     
 spec:
   project: default
+  revisionHistoryLimit: {{install.argocd.revision_History_Limit|default(3)}}
 
   source:
     repoURL: {{install.argocd.repository.url}}.git
