--- a/templates/kube-vip/applications/kube-vip.yaml.j2
+++ b/templates/kube-vip/applications/kube-vip.yaml.j2
@@ -11,6 +11,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "0"  # Lower the number the sooner to deploy
 spec:
   project: {{install.kube_vip.argocd_project|default("default")}}
+  revisionHistoryLimit: {{install.argocd.revision_History_Limit|default(3)}}
 
   source:
     repoURL: {{install.argocd.repository.url}}.git
