--- a/templates/sealed-secrets/applications/sealed-secerts.yaml.j2
+++ b/templates/sealed-secrets/applications/sealed-secerts.yaml.j2
@@ -12,6 +12,8 @@ metadata:
     
 spec:
   project: {{install.sealed_secrets.argocd_project|default("default")}}
+  revisionHistoryLimit: {{install.argocd.revision_History_Limit|default(3)}}
+
   source:
     chart: sealed-secrets
     repoURL: https://bitnami-labs.github.io/sealed-secrets
