--- a/templates/upgrade-controller/applications/upgrade-controller.yaml.j2
+++ b/templates/upgrade-controller/applications/upgrade-controller.yaml.j2
@@ -11,14 +11,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "8"  # Lower the number the sooner to deploy
 spec:
   project: system-upgrade
-
-  # system-upgrade-controller dynamically mucks with CRD
-  ignoreDifferences:
-    - group: apiextensions.k8s.io
-      kind: CustomResourceDefinition
-      name: plans.upgrade.cattle.io
-      jsonPointers:
-        - /spec/versions
+  revisionHistoryLimit: {{install.argocd.revision_History_Limit|default(3)}}
 
   source:
     repoURL: '{{install.argocd.repository.url}}.git'
@@ -28,6 +21,14 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: system-upgrade
+
+  # system-upgrade-controller dynamically mucks with CRD
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: plans.upgrade.cattle.io
+      jsonPointers:
+        - /spec/versions
 
   syncPolicy:
     automated:
